temp james and pavo

--- a/james.html
+++ b/james.html
@@ -30,18 +30,18 @@
           class="space-out"
           style="border-bottom: 1px solid #e1e1e1; padding: 5px 0;"
         >
-          <h2 style="margin: 0;">PAVO VIOTTI</h2>
+          <h2 style="margin: 0;">JAMES BAILES</h2>
           <img src="logo-mini-temp.png" style="height: 40px;" />
         </div>
         <div class="space-out" style="padding: 10px 0;">
           <div>
-            <a href="tel:+27836514314">+27 83 651 4314</a><br /><a
+            <a href="tel:+27828510574">+27 82 851 0574</a><br /><a
               href="tel:+27216833424"
               >+27 21 683 3424</a
             >
           </div>
           <div>
-            <a href="mailto:pavo@castleton.za.com">pavo@castleton.za.com</a
+            <a href="mailto:james@castleton.za.com">james@castleton.za.com</a
             ><br />
             <a href="castletoncapital.za.com">castletoncapital.za.com</a>
           </div>
