--- a/james.html
+++ b/james.html
@@ -5,6 +5,7 @@
     body {
       color: #020202;
       font-size: 14px;
+      font-family: "Optima", "montserrat", "Trebuchet MS", Arial;
     }
     .space-out {
       display: flex;
@@ -21,7 +22,7 @@
     <div style="max-width: 600px; padding: 10px;" class="space-out">
       <!-- <div> -->
       <img
-        src="./logo-temp.png"
+        src="./logo.png"
         style="width: 16%; display: block; padding: 10px 1%;"
       />
       <!-- </div> -->
@@ -30,10 +31,25 @@
           class="space-out"
           style="border-bottom: 1px solid #e1e1e1; padding: 5px 0;"
         >
-          <h2 style="margin: 0;">JAMES BAILES</h2>
-          <img src="logo-mini-temp.png" style="height: 40px;" />
+          <h2
+            style="
+              margin: 0;
+              font-family: 'Optima', 'Trebuchet MS', Arial;
+              letter-spacing: 3px;
+            "
+          >
+            JAMES BAILES
+          </h2>
+          <img src="logo-mini.png" style="height: 40px;" />
         </div>
-        <div class="space-out" style="padding: 10px 0;">
+        <div
+          class="space-out"
+          style="
+            padding: 10px 0;
+            font-family: 'Gotham', 'montserrat', 'Trebuchet MS', Arial;
+            font-size: 12px;
+          "
+        >
           <div>
             <a href="tel:+27828510574">+27 82 851 0574</a><br /><a
               href="tel:+27216833424"
@@ -43,10 +59,16 @@
           <div>
             <a href="mailto:james@castleton.za.com">james@castleton.za.com</a
             ><br />
-            <a href="castletoncapital.za.com">castletoncapital.za.com</a>
+            <a href="https://castletoncapital.za.com"
+              >castletoncapital.za.com</a
+            >
           </div>
           <div>
             <a
+              style="
+                font-family: 'Optima', 'Trebuchet MS', Arial;
+                font-weight: bold;
+              "
               href="https://www.google.com/maps/place/1+Oakdale+Rd,+Newlands,+Cape+Town,+7700/@-33.9793775,18.4589929,17z/data=!3m1!4b1!4m5!3m4!1s0x1dcc42cdd90a57bd:0x4d5c97be343ca259!8m2!3d-33.9793775!4d18.4611816"
               >1 Oakdale Road, Newlands,<br />Cape Town, 7700</a
             >
