non relative images

--- a/pavo.html
+++ b/pavo.html
@@ -19,10 +19,13 @@
     }
   </style>
   <body>
-    <div style="max-width: 600px; padding: 10px;" class="space-out">
+    <div
+      style="max-width: 600px; padding: 10px; background-color: white;"
+      class="space-out"
+    >
       <!-- <div> -->
       <img
-        src="./logo.png"
+        src="https://denhampreen.github.io/castleton-capital-email-signatures/logo.png"
         style="width: 16%; display: block; padding: 10px 1%;"
       />
       <!-- </div> -->
@@ -40,7 +43,10 @@
           >
             PAVO VIOTTI
           </h2>
-          <img src="logo-mini.png" style="height: 40px;" />
+          <img
+            src="https://denhampreen.github.io/castleton-capital-email-signatures/logo-mini.png"
+            style="height: 40px;"
+          />
         </div>
         <div
           class="space-out"
@@ -59,7 +65,7 @@
           <div>
             <a href="mailto:pavo@castleton.za.com">pavo@castleton.za.com</a
             ><br />
-            <a href="https://castletoncapital.za.com"
+            <a href="https://castletoncapital.za.com?email-sig-pavo"
               >castletoncapital.za.com</a
             >
           </div>
