--- a/james.html
+++ b/james.html
@@ -65,8 +65,8 @@
           <div>
             <a href="mailto:james@castleton.za.com">james@castleton.za.com</a
             ><br />
-            <a href="https://castletoncapital.za.com?email-sig-james"
-              >castletoncapital.za.com</a
+            <a href="https://www.castleton.za.com?email-sig-james"
+              >www.castleton.za.com</a
             >
           </div>
           <div>
