--- a/pavo.html
+++ b/pavo.html
@@ -65,8 +65,8 @@
           <div>
             <a href="mailto:pavo@castleton.za.com">pavo@castleton.za.com</a
             ><br />
-            <a href="https://castletoncapital.za.com?email-sig-pavo"
-              >castletoncapital.za.com</a
+            <a href="https://www.castleton.za.com?email-sig-pav"
+              >www.castleton.za.com</a
             >
           </div>
           <div>
